@startuml

title __ENTITY's Class Diagram__\n

  namespace by.training.nc.sd3 {
    namespace entity {
      class by.training.nc.sd3.entity.BillingAccount {
          - creditCardNumber : String
          - id : Long
          - isBanned : boolean
          - money : int
          - name : String
          - ownerId : Long
          - password : String
          + BillingAccount()
          + BillingAccount()
          + getCreditCardNumber()
          + getId()
          + getIsBanned()
          + getMoney()
          + getName()
          + getOwnerId()
          + getPassword()
          + setBanned()
          + setMoney()
          + setOwnerId()
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace entity {
      enum Categories {
        development
        films
        music
        office
        streaming
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace entity {
      class by.training.nc.sd3.entity.OfferParam {
          - id : Long
          - name : String
          - productOfferingId : Long
          - value : String
          + OfferParam()
          + OfferParam()
          + getId()
          + getName()
          + getProductOfferingId()
          + getValue()
          + setId()
          + setName()
          + setProductOfferingId()
          + setValue()
          + toString()
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace entity {
      class by.training.nc.sd3.entity.ProductInstance {
          - creationDate : Date
          - id : Long
          - status : boolean
          - userId : Long
          + ProductInstance()
          + ProductInstance()
          + getBillingAccount()
          + getCreationDate()
          + getId()
          + getProductOffering()
          + getUserId()
          + isStatus()
          + setBillingAccount()
          + setCreationDate()
          + setId()
          + setProductOffering()
          + setStatus()
          + setUserId()
          + toString()
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace entity {
      class by.training.nc.sd3.entity.ProductOffering {
          - category : int
          - cost : int
          - description : String
          - id : Long
          - isBanned : boolean
          - name : String
          - params : List<OfferParam>
          + ProductOffering()
          + ProductOffering()
          + equals()
          + getCategory()
          + getCost()
          + getDescription()
          + getId()
          + getIsBanned()
          + getName()
          + getParams()
          + hashCode()
          + isBanned()
          + setBanned()
          + setCategory()
          + setCategory()
          + setCost()
          + setDescription()
          + setId()
          + setIsBanned()
          + setName()
          + setParams()
          + toString()
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace entity {
      class by.training.nc.sd3.entity.StatisticsEntry {
          - billingAccountId : Long
          - date : LocalDateTime
          - id : Long
          - sum : Long
          + StatisticsEntry()
          + StatisticsEntry()
          + getBillingAccountId()
          + getDate()
          + getId()
          + getServiceId()
          + getSum()
          + setBillingAccountId()
          + setDate()
          + setId()
          + setServiceId()
          + setSum()
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace entity {
      class by.training.nc.sd3.entity.UserAccount {
          - activeBillingAccountId : Long
          - email : String
          - id : Long
          - isAdmin : boolean
          - isBanned : boolean
          - name : String
          - password : String
          + UserAccount()
          + UserAccount()
          + getActiveBillingAccountId()
          + getEmail()
          + getId()
          + getIsAdmin()
          + getIsBanned()
          + getName()
          + getPassword()
          + setActiveBillingAccountId()
          + setIsBanned()
          + toString()
      }
    }
  }
  

  by.training.nc.sd3.entity.ProductInstance o-- by.training.nc.sd3.entity.BillingAccount : billingAccount
  by.training.nc.sd3.entity.ProductInstance o-- by.training.nc.sd3.entity.ProductOffering : productOffering
  by.training.nc.sd3.entity.StatisticsEntry o-- by.training.nc.sd3.entity.ProductOffering : serviceId


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
